--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@ layout: default
     <p>I am a front-leaning full-stack developer who enjoys the merging of art and science that comes with full-stack web development. Here are some of the <span class="egg" title="What decides of something &ldquo;is a word&rdquo;, anyway?">awesomer</span> things I've done.</p>
     
     {% for item in site.folio_items %}
-      <a href="{{ item.url | prepend: site.baseurl }}"><h4>{{ item.title }}</h4></a>
+      <a href="{{ item.url | prepend: site.baseurl }}">
+        <h4>{{ item.title }}</h4>
+        <img class="screenshot" src="{{ site.baseurl }}/img/{{ item.screenshot }}">
+      </a>
       <p>{{ item.brief }}</p>
     {% endfor %}
     
   </article>
 
 </div>
-
