--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,8 @@ layout: null
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"/>
   <!-- <meta name="viewport" content="width=device-width"> -->
   <meta content="noindex" name="robots"/>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"/>
+  <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"/> -->
+  <link href="{{ site.baseurl }}/css/bootstrap.css" media="all" rel="stylesheet"/>
   <link href="{{ site.baseurl }}/css/resume-main.css" media="all" rel="stylesheet"/>
   <link href="{{ site.baseurl }}/css/resume-print.css" media="all" rel="stylesheet"/>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"/>
