Modified resume occupation.

--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@ layout: null
   <header class="top-header">
     <div class="nameplate clearfix">
       <span class="first-name">{{site.data.resume.first_name}}&nbsp;</span><span class="last-name">{{site.data.resume.last_name}}</span>
-      <span class="occupation">Web Developer</span>
+      <span class="occupation">{{site.data.resume.occupation}}</span>
     </div>
     <div class="row contact-list-row">
       <div class="col-xs-4 contact-list-col">
