Web resume now has link to pdf version.

--- a/resume.html
+++ b/resume.html
@@ -184,7 +184,7 @@ layout: null
       
     </div>
   </div>
-  
+  <a class="pdf-link" href="{{site.data.resume.pdf_url}}"><i class="fa fa-file-pdf-o"></i> <span>PDF Version</span></a>
 </div>
 </div>
 </main>
