Increased "portal" padding and made a fix to the homepage.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
           </a>
         </div>
         <div class="folio-brief-col">
-          <p class="brief">{{ item.brief }}</p>
+          <p class="brief">{{ item.summary }}</p>
         </div>
       </div>
     {% endfor %}
