--- a/resume.html
+++ b/resume.html
@@ -8,9 +8,14 @@ layout: null
   <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
   <meta charset="utf-8"/>
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"/>
-  <!-- <meta name="viewport" content="width=device-width"> -->
   <meta content="noindex" name="robots"/>
-  <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"/> -->
+  
+  <link rel="icon" type="image/png" href="/favicon-16x16.png?v=2" sizes="16x16">
+  <link rel="icon" type="image/png" href="/favicon-24x24.png?v=2" sizes="24x24">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png?v=2" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-48x48.png?v=2" sizes="48x48">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=2">
+  
   <link href="{{ site.baseurl }}/css/bootstrap.css" media="all" rel="stylesheet"/>
   <link href="{{ site.baseurl }}/css/resume-main.css" media="all" rel="stylesheet"/>
   <link href="{{ site.baseurl }}/css/resume-print.css" media="all" rel="stylesheet"/>
