--- a/gift.html
+++ b/gift.html
@@ -18,16 +18,16 @@ year: 2016
     <ul>
       <li>{{ gift.description }}</li>
       <li>{{ gift.price }}</li>
-      {% if gift.note %}
-        <li class="note"> {{ gift.note | markdownify }}</li>
-      {% endif %}
-      {% if gift.osublist %}
-        <li><ol class="sublist">
-        {% for subitem in gift.osublist %}
-          <li>{{ subitem.text | markdownify }}</li>
-        {% endfor %}
-        </ol></li>
-      {% endif %}
+    {% if gift.note %}
+      <li class="note fa-{{gift.note.icon}}"> {{ gift.note.text | markdownify }}</li>
+    {% endif %}
+    {% if gift.osublist %}
+      <li><ol class="sublist">
+     {% for subitem in gift.osublist %}
+      <li>{{ subitem.text | markdownify }}</li>
+     {% endfor %}
+      </ol></li>
+    {% endif %}
     </ul>
   </li>
 {% endfor %}
