--- a/gift.html
+++ b/gift.html
@@ -1,8 +1,8 @@
 ---
 permalink: /gift/
 layout: gift_list
-occasion: Christmas
-year: 2016
+occasion: Birthday
+year: 2017
 ---
 
 {% if site.data.gifts.prescript %}
