Gift list links have target="_blank"

--- a/gift.html
+++ b/gift.html
@@ -14,7 +14,7 @@ year: 2017
 <ol>
 {% for gift in site.data.gifts.current %}
   <li>
-    <a href="{{ gift.link }}">{{ gift.name }}</a>
+    <a href="{{ gift.link }}" target="_blank">{{ gift.name }}</a>
     <ul>
       <li>{{ gift.description }}</li>
       <li>{{ gift.price }}</li>
