--- a/gift.html
+++ b/gift.html
@@ -19,7 +19,11 @@ year: 2020
       <li>{{ gift.description }}</li>
       <li>{{ gift.price }}</li>
     {% if gift.note %}
-      <li class="note fa-{{gift.note.icon}}"> {{ gift.note.text | markdownify }}</li>
+      {% if gift.note.icon %}
+        <li class="note fa-{{gift.note.icon}}"> {{ gift.note.text | markdownify }}</li>
+      {% else %}
+        <li class="note">{{ gift.note.text | markdownify }}</li>
+      {% endif %}
     {% endif %}
     {% if gift.osublist %}
       <li><ol class="sublist">
