--- a/gift.html
+++ b/gift.html
@@ -21,6 +21,8 @@ year: 2021
     {% if gift.note %}
       {% if gift.note.icon %}
         <li class="note fa-{{gift.note.icon}}"> {{ gift.note.text | markdownify }}</li>
+      {% elsif gift.note.emoji %}
+        <li class="note"><span class="emoji">{{ gift.note.emoji }}</span> {{ gift.note.text | markdownify }}</li>
       {% else %}
         <li class="note">{{ gift.note.text | markdownify }}</li>
       {% endif %}
