Comment out most of resume
Replace with shoo message

--- a/resume.html
+++ b/resume.html
@@ -28,13 +28,14 @@ layout: null
 
 <main class="document-container">
 <div class="page page-1">
-<div class="page-content">
+<div class="page-content i-have-a-job">
   
   <header class="top-header">
     <div class="nameplate clearfix">
       <span class="first-name">{{site.data.resume.first_name}}&nbsp;</span><span class="last-name">{{site.data.resume.last_name}}</span>
       <span class="occupation">{{site.data.resume.occupation}}</span>
     </div>
+    <!--
     <div class="row contact-list-row">
       <div class="col-xs-4 contact-list-col">
         <ul class="contact-list">
@@ -87,7 +88,15 @@ layout: null
         </ul></div>
       </div>
     </div>
+    -->
   </header>
+  
+  <div>
+    <p>I have a job.</p>
+    <img src="{{ site.baseurl }}/img/move-along.gif" alt="Storm Trooper says, “Move along.”" />
+  </div>
+  
+  <!--
   <div class="row page-body">
     <div id="left-column" class="fill col-xs-8">
       <section id="summary">
@@ -195,6 +204,7 @@ layout: null
     </div>
   </div>
   <a class="pdf-link" href="{{site.data.resume.pdf_url}}"><i class="fa fa-file-pdf-o"></i> <span>PDF Version</span></a>
+   -->
 </div>
 </div>
 </main>
